# SPMS

./: pyproject.toml
Example/sdf_examples/: L-proline_descriptors.json
spms/: __init__.py  cli.py  numpy_compat.py
